<?xml version="1.0"?>
<package>
  <name>custom_rrbot_description</name>
  <version>0.0.0</version>
  <description>The custom_rrbot_description package</description>

  <maintainer email="numaguchi@todo.todo">numaguchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
