<package>
  <name>custom_rrbot_gazebo</name>
  <version>0.1.0</version>
  <description>custom_rrbot_gazebo</description>
  <maintainer email="numaguchi@todo.todo">numaguchi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>custom_rrbot_control</run_depend>
  <run_depend>custom_rrbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
